--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
 	},
 	"dependencies": {
 		"@rivalis/boot": "^1.0.5",
-		"@rivalis/browser": "^1.2.7",
 		"@rivalis/core": "^4.11.16",
 		"@rivalis/registry": "^2.5.28",
-		"@rivalis/transports": "^1.1.7",
-		"phaser": "^3.55.2"
+		"@rivalis/transports": "^1.1.7"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.16.12",
@@ -23,6 +21,8 @@
 		"@babel/preset-env": "^7.16.11",
 		"@rivalis/console": "^1.3.3",
 		"nodemon": "^2.0.15",
-		"parcel": "^2.2.1"
+		"parcel": "^2.2.1",
+		"phaser": "^3.55.2",
+		"@rivalis/browser": "^1.2.7"
 	}
 }
